zerocopy-derive/tests/ui-msrv/late_compile_pass.stderr
error[E0277]: the trait bound `&'static str: FromBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:23:10
   |
23 | #[derive(FromBytes)]
   |          ^^^^^^^^^ the trait `FromBytes` is not implemented for `&'static str`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `FromBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NotZerocopy: AsBytes` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:32:10
   |
32 | #[derive(AsBytes)]
   |          ^^^^^^^ the trait `AsBytes` is not implemented for `NotZerocopy`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `AsBytes` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:42:10
   |
42 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:50:10
   |
50 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `AU16: Unaligned` is not satisfied
  --> tests/ui-msrv/late_compile_pass.rs:57:10
   |
57 | #[derive(Unaligned)]
   |          ^^^^^^^^^ the trait `Unaligned` is not implemented for `AU16`
   |
   = help: see issue #48214
   = note: this error originates in the derive macro `Unaligned` (in Nightly builds, run with -Z macro-backtrace for more info)
